[package]
name = "cni-sdk-types"
version = "0.16.0"
edition = "2021"
license = "Apache-2.0"
description = "Standard Chia types for things such as puzzle info and conditions."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/Chia-Network/cni-wallet-sdk"
repository = "https://github.com/Chia-Network/cni-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
cni-sdk-derive = { workspace = true }
chia-bls = { workspace = true }
chia-protocol = { workspace = true }
chia-consensus = { workspace = true }
clvm-traits = { workspace = true }
clvmr = { workspace = true }
hex-literal = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
anyhow = { workspace = true }
